<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/AppWidgetBody"
    android:orientation="vertical">

	<LinearLayout style="@style/VolumeToggleButtonPanel">
		<ImageButton android:id="@+id/btnNudgeDown"
			android:background="@drawable/appwidget_button_topleft"
			style="@style/WidgetButtonNudgeDown"
			android:contentDescription="@string/lower_volume" />
		
		<ImageView style="@style/WidgetColumnDivider" android:contentDescription="@string/divider" />
		
		<ImageButton android:id="@+id/btnNudgeUp"
			android:background="@drawable/appwidget_button_topright"
			style="@style/WidgetButtonNudgeUp"
			android:contentDescription="@string/raise_volume" />
	</LinearLayout>
	
	<ImageView style="@style/WidgetColumnHorizontalDivider" android:contentDescription="@string/divider" />
	
	<Button android:id="@+id/btnCaption"
		android:background="@drawable/appwidget_button_bottom"
		style="@style/VolumeToggleCaption" />
	
</LinearLayout>
